--- a/style.css
+++ b/style.css
@@ -229,6 +229,51 @@ ul div li a:hover{
 }
 
 
+.usefulLinks{
+    margin: 50px 0 30px 0;
+}
+
+.usefulLinks-box{
+    margin: 10px 20px 15px 20px;
+    border: 1px #C0C0C0 solid;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
+    min-width: 260px;
+    max-width: 500px;
+    width: 25%;
+    max-height: 400px;
+    text-align: center;
+}
+
+.usefulLinks-box-inside-header{
+    margin: 0 3% 0 3%;
+    text-align: left;
+    font-size: 26px;
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;
+    color: black;
+}
+
+.usefulLinks-box-inside-header:hover{
+    transition: all ease 0.1s;
+    color: orangered;
+    cursor: pointer;
+}
+
+.usefulLinks-box img{
+    width: 100%;
+    height: 50%;
+    margin: 0 0 15px 0;
+}
+
+.usefulLinks-box-inside-text{
+    margin: 5% 3% 4% 3%;
+    text-align: left;
+    font-size: 18px;
+    font-weight: 560;
+    font-family: 'Roboto', sans-serif;
+    color: black;
+}
+
 @media only screen and (min-width: 1570px){
 
     ul div li a{
@@ -382,6 +427,7 @@ ul div li a:hover{
     .offer-inner{
         flex-direction: column;
         align-items: center;
+        margin: 20px 0 0 0;
     }
 
     .offer-inner-box-inside{
@@ -390,6 +436,19 @@ ul div li a:hover{
 
     .second-offer-box-spacing{
         margin: 0;
+    }
+
+    .usefulLinks{
+        margin: 20px 0 15px 0;
+    }
+
+    .usefulLinks-box-inside-header{
+        font-size: 18;
+    }
+
+    .usefulLinks-box img{
+        height: 140px;
+        margin: 0 0 10px 0;
     }
 }
 
