--- a/style.css
+++ b/style.css
@@ -274,6 +274,37 @@ ul div li a:hover{
     color: black;
 }
 
+.bottom{
+    margin: 60px 0 0 0;
+    padding: 3% 3% 2% 3%;
+    border-top: 1px solid black;
+    background-color: #FCF9F9;
+}
+
+.bottom-header{
+    font-family: 'Roboto', sans-serif;
+    color: black;
+    font-size: 22px;
+}
+
+.bottom-text-spacing{
+    width: 100%;
+    display: flex;
+}
+
+.bottom-footer{
+    font-family: 'Roboto', sans-serif;
+    color: black;
+    font-size: 18px;
+    font-weight: 500;
+    margin: 3% 1% 0 0;
+}
+
+.bottom-text-inline{
+    display: flex;
+}
+
+
 @media only screen and (min-width: 1570px){
 
     ul div li a{
@@ -309,7 +340,7 @@ ul div li a:hover{
 @media only screen and (max-width: 920px){
 
     .navbar-image{
-        width: 0%;
+        width: 40%;
     }
 
     .navbar-links{
@@ -381,6 +412,12 @@ ul div li a:hover{
 
 /* Mobile aproach */
 @media only screen and (max-width: 600px){
+
+    ul div{
+        flex-wrap: nowrap;
+        margin: 0 5% 0 5%;
+    }
+
     .navbar-image{
         display: none;
     }
@@ -447,12 +484,17 @@ ul div li a:hover{
     }
 
     .usefulLinks-box-inside-text{
+        font-weight: 200;
         font-size: 14px;
     }
 
     .usefulLinks-box img{
         height: 140px;
         margin: 0 0 10px 0;
+    }
+
+    .bottom-text-inline{
+        flex-direction: column;
     }
 }
 
