--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-html{
-    scroll-behavior: smooth;
-}
-
 body{
     background-color: white;
     min-width: fit-content;
@@ -55,6 +51,10 @@ ul div li a{
     font-weight: 400;
     font-size: 20px;
     text-decoration: none;
+}
+
+ul div li a:after{
+    transition: 0.5s;
 }
 
 ul div li a:hover{
